--- a/rps/[E-01]Rock_Paper_Scissor.ipynb
+++ b/rps/[E-01]Rock_Paper_Scissor.ipynb
@@ -606,7 +606,7 @@
     "2020년 1월 5일과 6일 이틀에 걸쳐 작업을 했다.   \n",
     "   \n",
     "   \n",
-    "1. 1차 시기 (실은 약 200여회차...)   \n",
+    "__1. 1차 시기 (실은 약 200여회차...)__   \n",
     "   \n",
     "훈련 데이터셋 3000장, 테스트 데이터셋 300장 으로 모델을 평가했다.   \n",
     "학습시 정확도는 90%가 넘었지만 테스트 정확도는 40%대에 머물렀다.   \n",
@@ -615,7 +615,7 @@
     "200여회 남짓 모델을 돌려보았지만   \n",
     "테스트 정확도가 60%를 넘지 못했다.   \n",
     "   \n",
-    "2. 1차 시기의 실패 원인   \n",
+    "__2. 1차 시기의 실패 원인__   \n",
     "   \n",
     "너무 빡친 나머지 팀 슬랙에 여쭤보니   \n",
     "훈련 데이터셋과 테스트 데이터셋에 쓴 이미지들을 선별하지 않고 그냥 사용한 점이   \n",
@@ -626,13 +626,13 @@
     "약 30%의 데이터 손실이 일어났다.   \n",
     "하지만 이렇게 했을 때도 최종 테스트 정확도가 50%를 넘지 못했다.   \n",
     "   \n",
-    "3. 2차 시기   \n",
+    "__3. 2차 시기__   \n",
     "   \n",
     "훈련 데이터 셋의 크기는 그대로 두고   \n",
     "테스트 데이터 셋의 크기를 2배 늘려 425장을 사용했다.   \n",
     "그 결과 테스트 정확도가 70%까지 나왔다.  \n",
     "   \n",
-    "4. 3차 시기   \n",
+    "__4. 3차 시기__   \n",
     "   \n",
     "훈련 데이터셋의 크기를 2배로 늘려 4050장을 사용하고   \n",
     "테스트 데이터셋은 원래대로 218장을 사용했더니   \n",
@@ -641,7 +641,7 @@
     "최초 모델 평가에서 99%가 나와   \n",
     "오버 피팅이 의심되었다. 하지만 원인은 알 수 없었다. (퍼실님 왜 이렇게 되는 건지 알려 주실 수 있을까요?)   \n",
     "   \n",
-    "5. 4차 시기   \n",
+    "__5. 4차 시기__   \n",
     "   \n",
     "훈련 데이터셋을 5702장, 테스트 데이터셋을 643장 사용하여 돌려본 결과  \n",
     "학습시 정확도는 98%   \n",
@@ -658,7 +658,9 @@
    "metadata": {},
    "source": [
     "# 회고   \n",
-    "데이터의 질이 중요하다는 걸 깨달았을 때   \n",
+    "   \n",
+    "\n",
+    "__데이터의 질이 중요하다는 걸 깨달았을 때__   \n",
     "처음엔 너무나 실망스러웠다.   \n",
     "훈련데이터와 테스트데이터를 나눌 때, 테스트 데이터를 unseen data로 남겨둬야 하는데 그렇게 해선   \n",
     "결코 원하는 결과가 나오지 않는다는 사실이 너무나 끔찍했다.   \n",
@@ -668,13 +670,25 @@
     "3. 훈련데이터와 테스트데이터를 비슷한 수준의 이미지로 분류하여 모델을 돌림으로써   \n",
     "4. 이 프로젝트에서 기대할 수 있는 것은 문자 그대로 명백한 가위, 바위, 보 이미지를 분류해내는 것이 최선이다.   \n",
     "\n",
-    "나아가 이 프로젝트에서 내가 무엇을 배웠는지를 생각해보았다.   \n",
+    "__나아가 이 프로젝트에서 내가 무엇을 배웠는지를 생각해보았다.__   \n",
     "1. 데이터의 전처리는 단순히 알고리즘에 넣을 수 있게 데이터의 수치를 조정하는 것만이 아니라   \n",
     "   데이터의 질을 평균 이상으로 맞춰주는 작업도 포함된다.   \n",
     "2. 데이터의 질도 중요하지만, 그 전에 내가 만들고자 하는 모델이 어느 정도 수준의 결과를 낼 수 있는 모델인지를 먼저 분명히해야 한다.   \n",
     "3. 모델의 성능과 데이터의 수준을 정확히 파악했다 하더라도, 모델의 성능을 개선시키는 방법을 알지 못하면 1회용 모델을 만들게 될 뿐이다.   \n",
-    "4. 무엇보다 나의 지식 수준이 한참 낮아 모델이 정말 어떤 원리로 작동하는지 모르는 상태에서는 절대로 결과에 욕심을 내서도 짜증을 내서도 안된다.\n",
-    "5. 컴퓨터도 사용자가 너무 무식하면 두손 놓아버린다. (ResourceExhaustedError가 한 번 뜨니 더이상 코드런이 안돼 컴퓨터를 껐다 켜야 했다)"
+    "4. 데이터의 질 문제를 해결해도, 절대적인 데이터 양이 적으면 좋은 성능을 기대하기 어렵다.   \n",
+    "5. 나의 지식 수준이 한참 낮아 모델이 정말 어떤 원리로 작동하는지 모르는 상태에서는 절대로 결과에 욕심을 내서도 짜증을 내서도 안된다.   \n",
+    "6. 컴퓨터도 사용자가 너무 무식하면 두손 놓아버린다. (ResourceExhaustedError가 한 번 뜨니 더이상 코드런이 안돼 컴퓨터를 껐다 켜야 했다)   \n",
+    "   \n",
+    "__반성할 점__\n",
+    "1. 오늘 하루 종일 뇌가 가위바위보에만 쏠려버려 민채퍼실님의 코딩마스터 수업을 거의 못들었다..   \n",
+    "2. 1차 시기에서 그토록 많은 에너지와 시간을 낭비하지 않을 수 있었다. 가만히 생각해 보면 이미지 퀄리티를 고려해야한다는 점이   \n",
+    "   노드에 설명돼 있었다. 머리를 쓰자...   \n",
+    "   \n",
+    "__더 공부해야할 부분__   \n",
+    "함수가 길어지면 변수가 인자가 되고, 그 변수가 다시 다른 함수의 인자가 되고, 꼬리에 꼬리를 물면서 전체 그림을 놓친다.   \n",
+    "기본적인 문자열 함수들에 대한 이해가 부족하다. 슬라이싱, 인덱싱 기법들...   \n",
+    "넘파이 배열에 너무 약하다.   \n",
+    "딥러닝 용어를 더 공부해야겠다."
    ]
   },
   {
