--- a/_E-13_stock/[E13]stock/[E13]stock.ipynb
+++ b/_E-13_stock/[E13]stock/[E13]stock.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "married-allowance",
+   "id": "dressed-dance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deluxe-atmosphere",
+   "id": "annual-mortality",
    "metadata": {},
    "source": [
     "**데이터 로드**   \n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "passing-sister",
+   "id": "exposed-remark",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "miniature-indonesian",
+   "id": "impressive-payroll",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interior-burlington",
+   "id": "interested-hepatitis",
    "metadata": {},
    "source": [
     "**결측치 처리**"
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "living-distributor",
+   "id": "combined-black",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "higher-foundation",
+   "id": "union-turning",
    "metadata": {},
    "source": [
     "**정성적 그래프 분석**"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "younger-tenant",
+   "id": "conceptual-franklin",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-swing",
+   "id": "finnish-subsection",
    "metadata": {},
    "source": [
     "**정량적 Augmented Dicky-Fuller Test**"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "complete-desert",
+   "id": "infinite-statistics",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imported-absolute",
+   "id": "split-divide",
    "metadata": {},
    "source": [
     "**p-value값이 1에 가까우므로 보다 안정적인 시계열 데이터로 만들 필요가 있다**"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-testing",
+   "id": "rotary-journey",
    "metadata": {},
    "source": [
     "**방법 1. 로그변환**"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "affiliated-equity",
+   "id": "seeing-scroll",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standing-parliament",
+   "id": "taken-square",
    "metadata": {},
    "source": [
     "**방법 2.시계열 분해 (Time Series Decomposition)**"
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "looking-stock",
+   "id": "stable-constraint",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "handmade-subcommittee",
+   "id": "south-monster",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressive-cable",
+   "id": "naval-functionality",
    "metadata": {},
    "source": [
     "**학습 데이터 / 테스트 데이터 분리**"
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "patent-provincial",
+   "id": "imposed-grounds",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "copyrighted-schema",
+   "id": "written-liechtenstein",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "later-desire",
+   "id": "thick-first",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-passenger",
+   "id": "public-vienna",
    "metadata": {},
    "source": [
     "**모델생성 및 훈련, 추론**"
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "inclusive-damages",
+   "id": "convenient-shark",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "handmade-posting",
+   "id": "senior-orchestra",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "linear-captain",
+   "id": "handed-skirt",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rising-uncertainty",
+   "id": "roman-yield",
    "metadata": {},
    "source": [
     "# 다른 주식 종목 예측해 보기"
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indoor-relations",
+   "id": "funky-leather",
    "metadata": {},
    "source": [
     "## 데이터 로드   \n",
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "desirable-telescope",
+   "id": "round-evaluation",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooked-arena",
+   "id": "third-texas",
    "metadata": {},
    "source": [
     "## 결측치 처리   \n"
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aware-germany",
+   "id": "hearing-photography",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brave-korean",
+   "id": "distant-attachment",
    "metadata": {},
    "source": [
     "## 정성적 그래프 분석"
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "acknowledged-bouquet",
+   "id": "appropriate-setting",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enabling-foundation",
+   "id": "oriented-catalyst",
    "metadata": {},
    "source": [
     "## 정량적 Augmented Dicky-Fuller Test"
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "potential-divorce",
+   "id": "friendly-resistance",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elementary-coach",
+   "id": "attractive-triple",
    "metadata": {},
    "source": [
     "**p-value값이 1이므로 보다 안정적인 시계열 데이터로 만들 필요가 있다**"
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-lucas",
+   "id": "editorial-relaxation",
    "metadata": {},
    "source": [
     "### 1. 로그 변환"
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "hydraulic-league",
+   "id": "selected-zoning",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expected-reliance",
+   "id": "minute-memorial",
    "metadata": {},
    "source": [
     "## 2.시계열 분해 (Time Series Decomposition)"
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "american-making",
+   "id": "dense-worcester",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "expanded-meditation",
+   "id": "arabic-compound",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tested-circular",
+   "id": "incident-newark",
    "metadata": {},
    "source": [
     "## 학습 데이터 / 테스트 데이터 분리"
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "prime-secretary",
+   "id": "polish-scroll",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "accepting-situation",
+   "id": "qualified-henry",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "analyzed-finland",
+   "id": "outer-opportunity",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lightweight-generator",
+   "id": "genetic-curve",
    "metadata": {},
    "source": [
     "## 모델 생성 및 훈련, 추론"
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "juvenile-consumer",
+   "id": "considerable-planning",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "silver-interest",
+   "id": "statistical-invalid",
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "amber-chapter",
+   "id": "weighted-inspector",
    "metadata": {},
    "outputs": [
     {
@@ -1258,9 +1258,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "distant-grocery",
+   "metadata": {},
+   "source": [
+    "#  회고   \n",
+    "주식의 본질은   \n",
+    "성장가치는 있지만 자본금이 부족한 회사를 견인하고       \n",
+    "그럼으로써 성장한 회사가 벌어들인 이윤을 주주와 나누는 데 있다.      \n",
+    "따라서 주가를 예측하는 행위는  \n",
+    "그러한 회사의 잠재성장가치를 평가하는 것이 핵심이다.   \n",
+    "따라서   \n",
+    "회사의 재무구조, 포트폴리오, 직원들의 복리후생, 사회적 책임, 고용창출능력, 비전, 인사시스템, 투명성, R&D계획 및 실적 등   \n",
+    "무수한 현장의 상황을 직접 관찰하여 파악하고 평가하는 작업에 수반되지 않은   \n",
+    "모든 주가 예측 행위는   \n",
+    "좋게 말해 봐야 돈 놓고 돈 먹기   \n",
+    "나쁘게 말하면 참된 주주 자본주의 고혈을 빨아 먹는 기생행위에 지나지 않는다.   \n",
+    "과거의 데이터를 stationary하게 만들어 미래의 주가를 예측한다?   \n",
+    "이것으로 누군가가 돈을 버는 것이 가치롭다 말해진다면   \n",
+    "임대소득을 어느 정도의 불로소득으로 간주하는 관점 또한 정당화되기 어려워진다.   \n",
+    "딥러닝을 활용한 주가예측프로그램이라...   \n",
+    "기껏해야 수수료 장사, 탐욕을 부리자면 투기에 불과하다.   \n",
+    "공부할 가치가 없다.   \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "natural-month",
+   "id": "cooperative-plasma",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1268,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varying-uniform",
+   "id": "sound-reporter",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1276,15 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dominant-voltage",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "refined-financing",
+   "id": "expected-clause",
    "metadata": {},
    "outputs": [],
    "source": []
