--- a/_E-13_stock/[E13]stock/[E13]stock.ipynb
+++ b/_E-13_stock/[E13]stock/[E13]stock.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dressed-dance",
+   "id": "continuous-attendance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "annual-mortality",
+   "id": "collect-plumbing",
    "metadata": {},
    "source": [
     "**데이터 로드**   \n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "exposed-remark",
+   "id": "operating-visit",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "impressive-payroll",
+   "id": "ranking-effect",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interested-hepatitis",
+   "id": "covered-storage",
    "metadata": {},
    "source": [
     "**결측치 처리**"
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "combined-black",
+   "id": "photographic-customer",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "union-turning",
+   "id": "built-reaction",
    "metadata": {},
    "source": [
     "**정성적 그래프 분석**"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "conceptual-franklin",
+   "id": "variable-report",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finnish-subsection",
+   "id": "molecular-fusion",
    "metadata": {},
    "source": [
     "**정량적 Augmented Dicky-Fuller Test**"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "infinite-statistics",
+   "id": "strong-journalist",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "split-divide",
+   "id": "dying-medicare",
    "metadata": {},
    "source": [
     "**p-value값이 1에 가까우므로 보다 안정적인 시계열 데이터로 만들 필요가 있다**"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-journey",
+   "id": "generous-better",
    "metadata": {},
    "source": [
     "**방법 1. 로그변환**"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "seeing-scroll",
+   "id": "enabling-responsibility",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "taken-square",
+   "id": "occupational-drain",
    "metadata": {},
    "source": [
     "**방법 2.시계열 분해 (Time Series Decomposition)**"
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "stable-constraint",
+   "id": "angry-section",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "south-monster",
+   "id": "furnished-baking",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naval-functionality",
+   "id": "vocational-detector",
    "metadata": {},
    "source": [
     "**학습 데이터 / 테스트 데이터 분리**"
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "imposed-grounds",
+   "id": "republican-crazy",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "written-liechtenstein",
+   "id": "adapted-answer",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "thick-first",
+   "id": "silver-calendar",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-vienna",
+   "id": "russian-charles",
    "metadata": {},
    "source": [
     "**모델생성 및 훈련, 추론**"
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "convenient-shark",
+   "id": "controlling-poster",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "senior-orchestra",
+   "id": "posted-climate",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "handed-skirt",
+   "id": "brutal-trailer",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "roman-yield",
+   "id": "novel-reviewer",
    "metadata": {},
    "source": [
     "# 다른 주식 종목 예측해 보기"
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funky-leather",
+   "id": "quiet-reservoir",
    "metadata": {},
    "source": [
     "## 데이터 로드   \n",
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "round-evaluation",
+   "id": "prostate-machinery",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "third-texas",
+   "id": "seasonal-memory",
    "metadata": {},
    "source": [
     "## 결측치 처리   \n"
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "hearing-photography",
+   "id": "adjusted-chicken",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distant-attachment",
+   "id": "distant-venture",
    "metadata": {},
    "source": [
     "## 정성적 그래프 분석"
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "appropriate-setting",
+   "id": "reported-reporter",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "oriented-catalyst",
+   "id": "pregnant-venezuela",
    "metadata": {},
    "source": [
     "## 정량적 Augmented Dicky-Fuller Test"
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "friendly-resistance",
+   "id": "tough-abuse",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-triple",
+   "id": "static-ceramic",
    "metadata": {},
    "source": [
     "**p-value값이 1이므로 보다 안정적인 시계열 데이터로 만들 필요가 있다**"
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "editorial-relaxation",
+   "id": "bound-cable",
    "metadata": {},
    "source": [
     "### 1. 로그 변환"
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "selected-zoning",
+   "id": "improved-tribune",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minute-memorial",
+   "id": "renewable-benjamin",
    "metadata": {},
    "source": [
     "## 2.시계열 분해 (Time Series Decomposition)"
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dense-worcester",
+   "id": "cross-librarian",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "arabic-compound",
+   "id": "blind-functionality",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-newark",
+   "id": "immune-southwest",
    "metadata": {},
    "source": [
     "## 학습 데이터 / 테스트 데이터 분리"
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "polish-scroll",
+   "id": "stretch-honolulu",
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "qualified-henry",
+   "id": "attended-crowd",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "outer-opportunity",
+   "id": "corrected-geology",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genetic-curve",
+   "id": "eleven-writing",
    "metadata": {},
    "source": [
     "## 모델 생성 및 훈련, 추론"
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "considerable-planning",
+   "id": "juvenile-sport",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "statistical-invalid",
+   "id": "varying-killer",
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "weighted-inspector",
+   "id": "thick-panama",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distant-grocery",
+   "id": "spatial-copying",
    "metadata": {},
    "source": [
     "#  회고   \n",
@@ -1274,18 +1274,21 @@
     "모든 주가 예측 행위는   \n",
     "좋게 말해 봐야 돈 놓고 돈 먹기   \n",
     "나쁘게 말하면 참된 주주 자본주의 고혈을 빨아 먹는 기생행위에 지나지 않는다.   \n",
-    "과거의 데이터를 stationary하게 만들어 미래의 주가를 예측한다?   \n",
-    "이것으로 누군가가 돈을 버는 것이 가치롭다 말해진다면   \n",
-    "임대소득을 어느 정도의 불로소득으로 간주하는 관점 또한 정당화되기 어려워진다.   \n",
-    "딥러닝을 활용한 주가예측프로그램이라...   \n",
-    "기껏해야 수수료 장사, 탐욕을 부리자면 투기에 불과하다.   \n",
-    "공부할 가치가 없다.   \n"
+    "그런데   \n",
+    "딥러닝을 활용한 주가예측프로그램이라...\n",
+    "과거의 데이터를 stationary하게 만들어 미래의 주가를 예측한다라...   \n",
+    "데이터의 패턴에 위에 열거한, 열거되지 않은 많은 정보들이   \n",
+    "반영돼 있다하겠지만,   \n",
+    "정작 이 프로그램을 활용해 차트를 보는 사람의 눈에 투영되는 건   \n",
+    "상승세냐 하락세냐 그 뿐인것 아닌가?   \n",
+    "이건 정말 마주하고 싶지 않은 코드다.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cooperative-plasma",
+   "id": "operational-cambridge",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1293,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sound-reporter",
+   "id": "irish-advantage",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1301,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expected-clause",
+   "id": "bulgarian-america",
    "metadata": {},
    "outputs": [],
    "source": []
